# AgentTalk

./: .gitignore  CLAUDE.md  agenttalk_dashboard.py  agenttalk_heartbeat.py  agenttalk_monitor.py  agenttalk_router.py  pyproject.toml  requirements-dev.txt
.claude-flow/metrics/: performance.json  task-metrics.json
.claude/commands/: short.md
agenttalk/command_runner/: __init__.py  dummy_handler.py  pipeline.py  types.py
agenttalk/dashboard/: app.py  storage.py
agenttalk/heartbeat/: app.py  config.py  errors.py  handlers.py  ids.py  io.py  model.py  schema.py  state.py  timeutil.py
agenttalk/monitor/: __init__.py  app.py  io.py
agenttalk/release/: app.py
agenttalk/router/: __init__.py  app.py  dag.py  delivery_log.py  errors.py  io.py  schema.py
doc/: complete_end_to_end_example.md  design_decisions_clarification.md  external_knowledge_handling.md  hallucination_prevention_and_input_validation.md  how_agenttalk_works.md  logic_inconsistencies_analysis.md  meeting_phase_input_collection.md  product_requirements.md  task_blocking_and_wakeup.md  user_file_submission_guide.md
doc/DAG/: README.md  roadmap.md  semantics.md
doc/develop/: 00_architecture_overview.md  01_schema_validation.md  02_storage_layout_and_atomic_io.md  README.md  (+15 more)
tests/: test_ack_schema.py  test_command_runner_pipeline.py  test_dashboard_api.py  test_end_to_end_command_to_delivery.py  test_end_to_end_review_revision_release_flow.py  test_heartbeat.py  test_human_gateway_flow.py  test_interfaces.py  test_monitor.py  test_release_coordinator.py  test_router.py  test_schema_templates.py
(+132 files in other folders)
