[project]
name = "agenttalk"
version = "0.1.0"
description = "AgentTalk MVP utilities (heartbeat/router/monitor prototypes)"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
